# sdlnavsegda

./: .gitignore  README.md  configure.ac
src/: .gitignore  Makefile.am  sdldouble.c  sdlhello.c  sdlopengl.c
