AC_INIT([ArtNavsegda], [1.0], [artnavsegda@gmail.com],[artnavsegda],[https://github.com/artnavsegda])
AM_INIT_AUTOMAKE
AC_MSG_NOTICE([Art Navsegda])
AC_PROG_CC_C99
AC_CHECK_LIB([X11],[XCreateWindow])
AC_CHECK_LIB([GL],[glXCreateContext])
AC_CHECK_LIB([GLU],[gluPerspective])
AC_CHECK_LIB([GLEW],[glewInit])
AC_CHECK_LIB([SDL],[SDL_Init])
#PKG_CHECK_MODULES(XHELLO, [x11])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
